tests/invalid/class_constant_mutable/main.py
class Bad:
    VALUES: list[int] = [1, 2, 3]


if __name__ == "__main__":
    print(Bad.VALUES)
